--- a/Project.toml
+++ b/Project.toml
@@ -4,15 +4,17 @@ authors = ["Rodrigo Grijalba", "Alexander Quispe"]
 version = "0.0.1"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 
 [compat]
-julia = "1.8"
+CSV = "0.10.4"
 DataFrames = "1.3"
 Distributions = "0.25"
 GLM = "1.8"
+julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
