--- a/Project.toml
+++ b/Project.toml
@@ -8,13 +8,15 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
+StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 
 [compat]
 CSV = "0.10.4"
 DataFrames = "1.3"
 Distributions = "0.25"
 GLM = "1.8"
-julia = "1.8"
+StatsModels = "0.6"
+julia = "1.7, 1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
