--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 CSV = "0.10.4"
 DataFrames = "1.3"
 Distributions = "0.25"
-GLM = "1.8"
+GLM = "1.7, 1.8"
 PyPlot = "2.11"
 StatsModels = "0.6"
 julia = "1.7, 1.8"
