--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,7 +31,11 @@ jobs:
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
+        env:
+          PYTHON: ""
       - uses: julia-actions/julia-runtest@v1
+        env:
+          PYTHON: ""
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v2
         with:
@@ -47,8 +51,11 @@ jobs:
         with:
           version: '1'
       - uses: julia-actions/julia-buildpkg@v1
+        env:
+          PYTHON: ""
       - uses: julia-actions/julia-docdeploy@v1
         env:
+          PYTHON: ""
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: |
           julia --project=docs -e '
