--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "JlSensemakr"
+name = "Sensemakr"
 uuid = "d0a9aa98-a395-4522-b95d-eb86b2ee57ea"
 authors = ["Rodrigo Grijalba", "Alexander Quispe"]
 version = "0.0.1"
