--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-JlSensemakr = "d0a9aa98-a395-4522-b95d-eb86b2ee57ea"
+Sensemakr = "d0a9aa98-a395-4522-b95d-eb86b2ee57ea"
